2012-06-03  Philippe Brochard  <pbrochard@common-lisp.net>

	* src/clfswm-placement.lisp: Add an optional border size in all
	placement functions.

2012-05-30  Philippe Brochard  <pbrochard@common-lisp.net>

	* contrib/toolbar.lisp (clock): Add a clock module.

2012-05-28  Philippe Brochard  <pbrochard@common-lisp.net>

	* contrib/toolbar.lisp: begining of toolbar support.

2012-05-24  Philippe Brochard  <pbrochard@common-lisp.net>

	* src/clfswm-internal.lisp (rotate-root-geometry): Do not use
	rotatef but a simpler algorithm.

2012-05-19  Philippe Brochard  <pbrochard@common-lisp.net>

	* src/clfswm-placement.lisp: Adjust width and height in child and
	root placement to prevent too big child size.

2012-05-18  Philippe Brochard  <pbrochard@common-lisp.net>

	* src/clfswm-placement.lisp: New root placement possibility.

	* src/clfswm-util.lisp (change-current-root-geometry): New
	function.

2012-05-17  Philippe Brochard  <pbrochard@common-lisp.net>

	* src/clfswm-util.lisp (exchange-root-geometry-with-mouse): New
	function and menu.

2012-05-16  Philippe Brochard  <pbrochard@common-lisp.net>

	* src/menu-def.lisp: New root menu.

2012-05-15  Philippe Brochard  <pbrochard@common-lisp.net>

	* src/clfswm-circulate-mode.lisp (rotate-root-geometry-next)
	(rotate-root-geometry-previous): New second mode binding to change
	root geometry.

2012-05-13  Philippe Brochard  <pbrochard@common-lisp.net>

	* src/clfswm-internal.lisp: Remove the *current-child* variable
	and use a setfable function (current-child) instead.
	(current-child-setter): Store root current child before apllying
	current child change.

2012-05-09  Philippe Brochard  <pbrochard@common-lisp.net>

	* src/clfswm-internal.lisp: Use xdpyinfo/xinerama informations
	instead of xrandr informations.

2012-05-06  Philippe Brochard  <pbrochard@common-lisp.net>

	* src/clfswm-internal.lisp : Use only one list for root
	management.
	(*root*): Root management API simplification.
